app/src/app.css
/* ... */
.disclosure-button[aria-expanded='true'] > svg {
	color: var(--color-primary-700);
}

.disclosure-button > span {
	align-items: flex-start;
	color: var(--color-gray-900);
	display: inline-flex;
	flex-direction: column;
	font-weight: 500;
}

.disclosure-button small {
	color: var(--color-gray-500);
	font-size: 0.75rem;
}

/* Dropdown */
:root {
	--dropdown-button-default-background: var(--color-gray-050);
	--dropdown-button-default-border-color: var(--color-gray-200);
	--dropdown-button-default-color: var(--color-gray-500);
	--dropdown-button-hover-background: var(--color-gray-100);
	--dropdown-button-active-background: var(--color-gray-300);
	--dropdown-button-expanded-background: var(--color-gray-050);
	--dropdown-button-expanded-color: var(--color-gray-700);
	--dropdown-button-border-radius: 4px;
	--dropdown-button-border-width: 0;
	--dropdown-button-box-shadow: none;
	--dropdown-button-min-height: auto;
	--dropdown-button-padding: 0.375rem;
	--dropdown-button-icon-default-color: var(--color-gray-500);
	--dropdown-button-icon-expanded-color: inherit;
	--dropdown-button-icon-size: 1.25rem;
	--dropdown-button-chevron-display: block;
	--dropdown-button-chevron-default-color: var(--color-gray-500);
	--dropdown-button-chevron-expanded-color: var(--color-primary-600);
	--dropdown-button-chevron-icon-size: 1.25rem;
	--dropdown-button-align-items: center;
	--dropdown-panel-max-height: 20rem;
	--dropdown-panel-max-width: none;
	--dropdown-panel-padding: 0.5rem;
}

.dropdown {
	position: relative;
}

.dropdown-button {
	align-items: var(--dropdown-button-align-items);
	background: var(--dropdown-button-default-background);
	border: solid var(--dropdown-button-border-width) var(--dropdown-button-default-border-color);
	border-radius: var(--dropdown-button-border-radius);
	box-shadow: var(--dropdown-button-box-shadow);
	color: var(--dropdown-button-default-color);
	display: flex;
	font-weight: 500;
	gap: 0.25rem;
	justify-content: space-between;
	min-height: var(--dropdown-button-min-height);
	padding: var(--dropdown-button-padding);
	white-space: nowrap;
	width: 100%;
}

.dropdown-button:active {
	background: var(--dropdown-button-active-background);
}

.dropdown-button:hover {
	background: var(--dropdown-button-hover-background);
}

.dropdown-button[aria-expanded='true'] {
	background: var(--dropdown-button-expanded-background);
	color: var(--dropdown-button-expanded-color);
}

.dropdown-button > svg {
	flex-shrink: 0;
	height: var(--dropdown-button-icon-size);
	max-width: none;
	width: var(--dropdown-button-icon-size);
}

.dropdown-button > svg:first-child {
	color: var(--dropdown-button-icon-default-color);
}

.dropdown-button[aria-expanded='true'] > svg:first-child {
	color: var(--dropdown-button-icon-expanded-color);
}

.dropdown-button > svg:last-child {
	color: var(--dropdown-button-chevron-default-color);
	display: var(--dropdown-button-chevron-display);
	height: var(--dropdown-button-chevron-icon-size);
	width: var(--dropdown-button-chevron-icon-size);
}

.dropdown-button[aria-expanded='true'] > svg:last-child {
	color: var(--dropdown-button-chevron-expanded-color);
}

.dropdown-panel {
	background-color: white;
	border-radius: 8px;
	border: solid 1px var(--color-gray-200);
	box-shadow: var(--shadow-lg);
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	margin: 0;
	max-height: var(--dropdown-panel-max-height);
	max-width: var(--dropdown-panel-max-width);
	overflow-x: hidden;
	overflow-y: auto;
	padding: var(--dropdown-panel-padding);
	position: absolute;
	z-index: 2;
}

.dropdown-panel :has(> input[type='checkbox'], > input[type='radio']) {
	border-radius: 0.5rem;
	padding: 0.5rem 0.75rem;
}

.dropdown-panel *:has(> input[type='checkbox'], > input[type='radio']):hover {
	background-color: var(--color-gray-100);
}

/* Menu */
.menu-item > button {
	--button-active-background: transparent;
	--button-hover-background: var(--color-gray-100);
	--padding-x: 0.75rem;
	--padding-y: 0.5rem;

	align-items: center;
	color: var(--color-gray-900);
	border: none;
	display: flex;
	font-weight: 500;
	position: relative;
	width: 100%;
	white-space: nowrap;
}

.menu-item:nth-child(n + 2) {
	margin-top: 0.25rem;
}

.menu-item > button > svg {
	height: 1.5rem;
	max-width: none;
	width: 1.5rem;
}

/* Loader */
.loader {
	animation: rotation 1.5s linear infinite;
	border-radius: 50%;
	border-style: solid;
	border-width: 4px;
	border-color: var(--color-gray-200) var(--color-gray-200) var(--color-gray-200)
		var(--color-primary-600);
	box-sizing: border-box;
	flex-shrink: 0;
	height: 1rem;
	position: relative;
	width: 1rem;
}

@keyframes rotation {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

/* Utility classes */
.is-hidden {
	display: none;
}

@layer visually-hidden {
	.is-visually-hidden {
		border: 0;
		clip: rect(0 0 0 0);
		height: 1px;
		margin: -1px;
		overflow: hidden;
		padding: 0;
		position: absolute;
		width: 1px;
	}
}

@media (hover: hover) {
	.is-visible-on-hover {
		transition: var(--is-visible-on-hover-transition, none);
		visibility: var(--is-visible-on-hover-visibility, hidden);
	}
}

.truncated {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

